tests/bench/mvcgen/loom/Loom/Test/Strategies/ApplyLattice.lean
import Loom.Tactic.VCGen

/-!
Tests that `lmvcgen` applies lattice rules for meet, implication, and `ofProp`.
-/

open Loom Lean Meta Order Std.Internal.Do

set_option new_wp_monad true
set_option mvcgen.warning false

set_option trace.Loom.RuleConstruct.Logic true
namespace Loom.Test.Strategies.ApplyLattice

macro "test" : tactic => `(tactic| lmvcgen (names := [s‚āĀ, s‚āā]) -trivial)

/--
error: unsolved goals
case vc1
P Q : Prop
‚äĘ P

case vc2
P Q : Prop
‚äĘ Q
-/
#guard_msgs in
example (P Q : Prop) :
    (‚ä§ : Prop) ‚äĎ P ‚äď Q := by
  test

/--
error: unsolved goals
case vc1
P Q : Prop
h : P ‚Üí Q
a‚úĚ : P
‚äĘ Q
-/
#guard_msgs in
example (P Q : Prop) (h : P ‚Üí Q) :
    (‚ä§ : Prop) ‚äĎ P ‚á® Q := by
  test

/--
error: unsolved goals
case vc1
P : Prop
‚äĘ P
-/
#guard_msgs in
example (P : Prop) :
    (‚ä§ : Prop) ‚äĎ (‚ĆúP‚ĆĚ : Prop) := by
  test


/--
error: unsolved goals
case vc1
P Q : Nat ‚Üí Bool ‚Üí Prop
h : ‚ąÄ (n : Nat) (b : Bool), P n b ‚Üí Q n b
n‚úĚ : Nat
b‚úĚ : Bool
a‚úĚ : P n‚úĚ b‚úĚ
‚äĘ Q n‚úĚ b‚úĚ
-/
#guard_msgs in
example (P Q : Nat ‚Üí Bool ‚Üí Prop)
    (h : ‚ąÄ n b, P n b ‚Üí Q n b) :
    (‚ä§ : Nat ‚Üí Bool ‚Üí Prop) ‚äĎ P ‚á® Q := by
  lmvcgen (names := [n, b]) -trivial

/--
error: unsolved goals
case vc1
P Q : Nat ‚Üí Bool ‚Üí Prop
h : ‚ąÄ (n : Nat) (b : Bool), P n b ‚Üí Q n b
s‚āĀ‚úĚ : Nat
s‚āā‚úĚ : Bool
a‚úĚ : P s‚āĀ‚úĚ s‚āā‚úĚ
‚äĘ Q s‚āĀ‚úĚ s‚āā‚úĚ
-/
#guard_msgs in
example (P Q : Nat ‚Üí Bool ‚Üí Prop)
    (h : ‚ąÄ n b, P n b ‚Üí Q n b) :
    (‚ä§ : Nat ‚Üí Bool ‚Üí Prop) ‚äĎ (fun n => P n) ‚á® Q := by
  test

/--
error: unsolved goals
case vc1
P : Prop
s‚āĀ‚úĚ : Nat
s‚āā‚úĚ : Bool
‚äĘ P
-/
#guard_msgs in
example (P : Prop) :
    (‚ä§ : Nat ‚Üí Bool ‚Üí Prop) ‚äĎ (‚ĆúP‚ĆĚ : Nat ‚Üí Bool ‚Üí Prop) := by
  test

/--
error: unsolved goals
case vc1
l : Type
inst : CompleteLattice l
P Q : Nat ‚Üí Bool ‚Üí l
s‚āĀ‚úĚ : Nat
s‚āā‚úĚ : Bool
‚äĘ ‚ä§ ‚äĎ P s‚āĀ‚úĚ s‚āā‚úĚ

case vc2
l : Type
inst : CompleteLattice l
P Q : Nat ‚Üí Bool ‚Üí l
s‚āĀ‚úĚ : Nat
s‚āā‚úĚ : Bool
‚äĘ ‚ä§ ‚äĎ Q s‚āĀ‚úĚ s‚āā‚úĚ
-/
#guard_msgs in
example {l : Type} [CompleteLattice l] (P Q : Nat ‚Üí Bool ‚Üí l) :
    (‚ä§ : Nat ‚Üí Bool ‚Üí l) ‚äĎ P ‚äď Q := by
  test


/--
error: unsolved goals
case vc1
l : Type
inst : CompleteLattice l
P Q : Nat ‚Üí Bool ‚Üí l
s‚āĀ‚úĚ : Nat
s‚āā‚úĚ : Bool
‚äĘ P s‚āĀ‚úĚ s‚āā‚úĚ ‚äĎ Q s‚āĀ‚úĚ s‚āā‚úĚ
-/
#guard_msgs in
example {l : Type} [CompleteLattice l] (P Q : Nat ‚Üí Bool ‚Üí l) :
    (‚ä§ : Nat ‚Üí Bool ‚Üí l) ‚äĎ P ‚á® Q := by
  test


/--
error: unsolved goals
case vc1
l : Type
inst : CompleteLattice l
P Q : Nat ‚Üí Bool ‚Üí l
s‚āĀ‚úĚ : Nat
s‚āā‚úĚ : Bool
‚äĘ P s‚āĀ‚úĚ s‚āā‚úĚ ‚äĎ Q s‚āĀ‚úĚ s‚āā‚úĚ
-/
#guard_msgs in
example {l : Type} [CompleteLattice l] (P Q : Nat ‚Üí Bool ‚Üí l) :
    (‚ä§ : Nat ‚Üí Bool ‚Üí l) ‚äĎ (fun n => P n) ‚á® Q := by
  test

/--
error: unsolved goals
case vc1
l : Type
inst : CompleteLattice l
P : Prop
s‚āĀ‚úĚ : Nat
s‚āā‚úĚ : Bool
‚äĘ P
-/
#guard_msgs in
example {l : Type} [CompleteLattice l] (P : Prop) :
    (‚ä§ : Nat ‚Üí Bool ‚Üí l) ‚äĎ (‚ĆúP‚ĆĚ : Nat ‚Üí Bool ‚Üí l) := by
  test

/-! `‚ä§` on the RHS: `pre ‚äĎ ‚ä§` is discharged by `le_top`, so these goals close completely
    (even with `-trivial`, since `le_top` is applied structurally rather than by the discharger). -/

example : (‚ä§ : Prop) ‚äĎ (‚ä§ : Prop) := by
  lmvcgen -trivial

example {l : Type} [CompleteLattice l] :
    (‚ä§ : Nat ‚Üí Bool ‚Üí l) ‚äĎ (‚ä§ : Nat ‚Üí Bool ‚Üí l) := by
  lmvcgen -trivial

example {l : Type} [CompleteLattice l] (P : Nat ‚Üí Bool ‚Üí l) :
    P ‚äĎ (‚ä§ : Nat ‚Üí Bool ‚Üí l) := by
  lmvcgen -trivial

end Loom.Test.Strategies.ApplyLattice
